--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-static": "^1.0.0",
+		"@sveltejs/kit": "^1.0.1",
 		"@tailwindcss/typography": "^0.5.8",
 		"autoprefixer": "^10.4.13",
 		"cssnano": "^5.1.14",
-		"eslint": "^8.29.0",
+		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"graphql": "^16.6.0",
-		"graphql-request": "^5.0.0",
+		"graphql-request": "^5.1.0",
 		"husky": "^8.0.2",
 		"marked": "^4.2.4",
 		"postcss": "^8.4.20",
@@ -37,7 +38,7 @@
 		"tailwindcss": "^3.2.4",
 		"theme-change": "^2.2.0",
 		"typescript": "^4.9.4",
-		"vite": "^4.0.1"
+		"vite": "^4.0.2"
 	},
 	"type": "module"
 }
