--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-static": "^1.0.0",
 		"@sveltejs/kit": "^1.0.1",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.8",
 		"autoprefixer": "^10.4.13",
 		"cssnano": "^5.1.14",
-		"eslint": "^8.30.0",
+		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"graphql": "^16.6.0",
@@ -34,7 +35,7 @@
 		"svelte": "^3.55.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.0",
-		"tailwind-scrollbar": "^2.0.1",
+		"tailwind-scrollbar": "^2.1.0",
 		"tailwindcss": "^3.2.4",
 		"theme-change": "^2.2.0",
 		"typescript": "^4.9.4",
