--- a/package.json
+++ b/package.json
@@ -12,33 +12,38 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/adapter-static": "^1.0.0",
-		"@sveltejs/kit": "^1.0.1",
-		"@tailwindcss/typography": "^0.5.8",
-		"autoprefixer": "^10.4.13",
-		"cssnano": "^5.1.14",
-		"eslint": "^8.30.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/typography": "^0.5.9",
+		"autoprefixer": "^10.4.14",
+		"cssnano": "^6.0.1",
+		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"graphql": "^16.6.0",
-		"graphql-request": "^5.1.0",
-		"husky": "^8.0.2",
-		"marked": "^4.2.4",
-		"postcss": "^8.4.20",
+		"graphql": "^16.7.1",
+		"graphql-request": "^6.1.0",
+		"husky": "^8.0.3",
+		"marked": "^5.1.0",
+		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
-		"prettier-plugin-tailwindcss": "^0.2.1",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"pretty-quick": "^3.1.3",
-		"svelte": "^3.55.0",
-		"svelte-check": "^2.10.2",
-		"svelte-preprocess": "^5.0.0",
-		"tailwind-scrollbar": "^2.0.1",
-		"tailwindcss": "^3.2.4",
-		"theme-change": "^2.2.0",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.2"
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.4",
+		"svelte-preprocess": "^5.0.4",
+		"tailwind-scrollbar": "^3.0.4",
+		"tailwindcss": "^3.3.2",
+		"theme-change": "^2.5.0",
+		"typescript": "^5.1.3",
+		"vite": "^4.3.9"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@mux/mux-video": "^0.15.4",
+		"clsx": "^1.2.1"
+	}
 }
