--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@mux/mux-video": "^0.15.4",
+		"@sveltejs/adapter-vercel": "^3.0.1",
 		"clsx": "^1.2.1"
 	}
 }
