--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphcms/rich-text-react-renderer": "^0.6.1",
     "@mux/mux-video-react": "^0.7.18",
     "@radix-ui/react-icons": "^1.3.0",
+    "@vercel/analytics": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "encoding": "^0.1.13",
