--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "encoding": "^0.1.13",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "graphql-request": "^7.2.0",
     "next": "15.5.2",
     "postcss": "8.5.6",
